        ADDED - cactihost: DS plugin fetches a bunch of other stats from Cacti's DB now, too (like availability and response times)
        ADDED - Picking Cacti sources from editor has a javascript "live filter" feature now (needs a little work)
        ADDED - node coordinates are directly editable in the editor now
        ADDED - File picker allows you to use an existing map as a template
        
0.92 - FIXED weathermap CLI help said --random-data instead of --randomdata
       FIXED one last php short_tag in poller_common.php - thanks Bernado Diez
       FIXED a SET in DEFAULT node/link is inherited by all node/links now.
       FIXED changing defaults in the editor changes existing objects that use the default value
       FIXED unreadable files in the configs/ directory don't kill the editor file-picker anymore
       FIXED - weathermap.conf really *is* a simple map again. My test version went out with 0.9 and 0.91
       INTERNAL added a lot more memory debug points in
       INTERNAL refactored the curve/link drawing code to make some new features possible/easier
       Further tweaks and improvements to check.php (Basic GD check, memory_limit check, PEAR Getopt check, and more explanation now)
       Small improvements to the editor's font-picking, including samples of all fonts.
       Added - Editor handles VIAs in a MUCH better way when moving nodes.
       Improved clipping reporting, improved plugin loading (Niels Baggesen)
       Added - BWSTYLE lets you choose between regular and angled bwlabels
               angled bwlabels follow the angle of the link arrow, which can save space.
       Added - Editor can pick Cacti graphs for NODE's overlib/infourl (but NOT targets)
       Added - COMMENTPOS allows you to move the position of comments along the link (like BWLABELPOS)
       FIXED - strange edge case with gradient SCALE caused div-by-zero (Tiago Giorgetti)